# climate-product-api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  vercel.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260621_0000_initial_schema.py  20260622_0001_add_product_images.py  20260624_0002_add_password_reset_tokens.py  20260624_0003_add_token_purpose.py  20260624_0004_add_ai_jobs.py  20260625_0005_add_passport_shares.py  20260625_0006_add_lca_calculations.py  20260625_0007_add_domain_product_model.py  20260626_0008_add_product_verifications.py  20260626_0009_add_privacy_controls.py  20260626_0010_add_billing_subscriptions.py  20260626_0011_add_ai_safety_metadata.py  20260626_0012_add_document_intelligence_review.py  20260626_0013_add_professional_report_packs.py  20260701_0014_add_integrations.py
app/: main.py  seed.py
app/api/: deps.py
app/core/: config.py  middleware.py  security.py
app/db/: migrations.py  schema_guard.py  session.py
app/models/: __init__.py  ai_job.py  audit.py  billing.py  certificate.py  enums.py  integration.py  lca.py  organization.py  passport_share.py  product.py  report_pack.py  user.py  verification.py
app/observability/: logging.py
app/repositories/: ai_jobs.py  base.py  certificates.py  organizations.py  products.py  users.py
app/schemas/: ai.py  auth.py  billing.py  certificate.py  compliance.py  integration.py  lca.py  operations.py  organization.py  platform.py  product.py  verification.py
app/services/: ai_service.py  audit_service.py  auth_service.py  (+13 more)
(+16 files in other folders)
