[project]
name = "climate-product-api"
version = "0.1.0"
description = "FastAPI backend for a multi-tenant climate product management platform."
requires-python = ">=3.13"
dependencies = [
  "alembic>=1.16.0",
  "boto3>=1.35.0",
  "bcrypt>=4.1.3",
  "fastapi>=0.115.0",
  "email-validator>=2.2.0",
  "httpx>=0.28.0",
  "opentelemetry-api>=1.34.0",
  "opentelemetry-instrumentation-fastapi>=0.55b0",
  "opentelemetry-sdk>=1.34.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.8.0",
  "pyjwt>=2.10.0",
  "pypdf>=5.9.0",
  "python-multipart>=0.0.20",
  "redis>=5.2.0",
  "sqlalchemy>=2.0.36",
  "structlog>=25.1.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.setuptools.packages.find]
include = ["app*", "api*"]
exclude = ["alembic*"]
